--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: 'Roboto', sans-serif;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(248, 249, 251)
 }
 
 .material-icons {
@@ -31,4 +32,14 @@ body {
 
   /* Support for IE. */
   font-feature-settings: 'liga';
+}
+
+.header {
+  font-size: 1.5rem;
+}
+
+nav, main, footer {
+  width: 95%;
+  margin: 0.5remrem auto 0.5remrem auto;
+  max-width: 900px;
 }
